--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0px;
     font-family: Inter, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 400;
-    font-size: 32px;
+    font-size: 12px;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100vh;
+    height: 90vh    ;
     
     padding-left: 100px;
     padding-right: 100px;
@@ -26,13 +26,15 @@ body {
 .column1 {
     display: flex;
     flex-direction: column;
+    height: 100%;
     
 }
 
-.column1 {
+/* .column2 {
     display: flex;
+    height: 100%;
     
-}
+} */
 
 #logo {
     width: 20px;
@@ -101,6 +103,15 @@ textarea:focus {
     width: 300px;
 }
 
+#copy {
+    padding: 10px;
+    background-color: #FFFFFF;
+    color: #0A3871;
+    border-radius: 20px;
+    font-size: 12px;
+    width: 300px;
+}
+
 
 .form {
     margin-left: 100px;
@@ -115,7 +126,7 @@ textarea:focus {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: #FFFF;
     height: 70%;
     border-radius: 32px;
@@ -139,3 +150,6 @@ textarea:focus {
     ;
 }
 
+footer {
+    text-align: center;
+}
